--- a/style.css
+++ b/style.css
@@ -206,19 +206,22 @@ header {
 }
 
 .progress-line .html {
-  width: 80%;
+  width: 90%;
 }
 .progress-line .css {
   width: 70%;
 }
 .progress-line .bootstrap {
-  width: 50%;
+  width: 30%;
 }
 .progress-line .javascript {
+  width: 40%;
+}
+.progress-line .python {
   width: 50%;
 }
-.progress-line .c {
-  width: 50%;
+.progress-line .seo {
+  width: 90%;
 }
 
 .bar .progress-line span::before {
@@ -248,19 +251,22 @@ header {
 }
 
 .progress-line .html::after {
-  content: "80%";
+  content: "90%";
 }
 .progress-line .css::after {
   content: "70%";
 }
 .progress-line .bootstrap::after {
-  content: "50%";
+  content: "30%";
 }
 .progress-line .javascript::after {
+  content: "40%";
+}
+.progress-line .python::after {
   content: "50%";
 }
-.progress-line .c::after {
-  content: "50%";
+.progress-line .seo::after {
+  content: "90%";
 }
 
 .navbar.solid {
